[project]
name = ""
version = ""
description = ""
authors = [
    {name = "SodaCris", email = "wang-jiaxun@outlook.com"},
]
dependencies = [
    "pyinstaller>=4.5.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
